all products flex wrap  fixed

--- a/src/pages/Product/product.css
+++ b/src/pages/Product/product.css
@@ -17,22 +17,18 @@
   justify-content: center;
   padding: 10px;
   margin: 1rem;
-  
+  flex-wrap: wrap;
 }
 
 .product-item{
   margin-right: .5rem;
   margin-left: .2rem;
-  display:flex;
-  flex-wrap: wrap;
+  margin: 2rem;
 }
 
 .product-text{
   inline-size: 15em;
   /* overflow-wrap: break-word; */
- 
-
-
 }
 
 .small {
@@ -50,4 +46,8 @@
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.products-page-title {
+  text-align: center;
 }
